# ai-hub

./: .env.example  .gitignore  README.md  __main__.py  chat.bat  client.bat  config.example.yaml  content.md  default.yaml  factory.py  graph.py  langgraph.json  prompt.md  publish.py  pyproject.toml  requirements.txt  run.bat  server.bat  update.bat
api/: __init__.py  base_api.py  chat.py  context.py  search.py
api/core/: __init__.py  chat.py
config/: __init__.py
config/providers/: __init__.py  aliyun.py  base_provider.py  bocha.py  grok.py  liblib.py  openai.py  qanything.py  siliconflow.py
config/services/: __init__.py  base_service.py  provider.py  service.py
core/: __init__.py  async_run.py  load_config.py  log.py
core/providers/: __init__.py  liblib.py  registry.py
core/services/: __init__.py  base_operation.py  base_services.py  registry.py
examples/: callback.py  chat.py  client.py  server.py
examples/chat/: __main__.py
examples/qa/: __main__.py
examples/search/: __main__.py
examples/xlsx/: __main__.py  example.xlsx
models/: message.py
servers/: chat.py  qa.py  search.py  xlsx.py
src/: __main__.py  default.yaml  factory.py
src/ai_hub_agents/: __init__.py  __main__.py  app.py  callback.py  client.py  settings.py
src/api/: __init__.py  base_api.py  base_router.py  chat.py  context.py  search.py
src/core/: __init__.py  load_config.py
src/tests/: context.py  search.py
tests/: chat.py  context.py  search.py
tests/chat/: conftest.py  test_greeting.py  test_knowledge.py  test_memory.py  test_reply.py
tests/qa/: conftest.py  test_chat_path.py  test_mixed_conversation.py  test_router.py  test_routing.py  test_search_path.py
tests/search/: conftest.py  test_fetch_content.py  test_providers.py  test_search_scenario.py  test_search_urls.py  test_summarize.py
tests/xlsx/: conftest.py  test_adjust_structure.py  test_conditional_highlight.py  test_create_chart.py  test_data_analysis.py  test_edit_data.py  test_format_report.py  test_manage_sheets.py  test_recalc.py  test_view_data.py  (+1 more)
(+148 files in other folders)
