[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-hub-agents"
version = "0.1.22"
description = "模块化 AI Agent 框架，基于 LangChain / LangGraph"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "python-frontmatter>=1.0",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0.0",
    "colorlog>=6.0",
    "langchain-mcp-adapters>=0.1.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
    "langchain-openai>=0.1.0",
    "filelock>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_hub_agents"]
